# Advanced-computer-programming

./: .gitignore  decrypt.py  encrypt.py  main.py  output.txt  second_output.txt  test.py
3.1/: copy_object.py
3.3/: superhero.py
3.4/: Draw.py  main.py  person.py  phone.py  vehicle.py
4.1/: dinosaur.py
4.3/: shape.py  triangle.py
Dessert Shop/: desserts.py  dessertshop.py  testMain.py  test_dessert.py  test_desserts.py
Dessert shop 4-14/: test_desserts.py
Flappy Bird/: game.py  main.py
Lessons/3.1/: actor_object.py  better_actor.py  user_object.py
Lessons/3.3/: hierarchy.py  main.py  person.py
Lessons/4.1/: carnivore.py  instance_subclass_test.py  test_mro.py  tyrannosaurus.py
Lessons/4.3/: main.py  rectangle.py
Lessons/4.4/: closures.py  composition.py  decorator.py  return_function.py  summation.py
Lessons/C/: CMakeLists.txt
Lessons/C/3 17 23/: DoublyLinkedList.cpp  DoublyLinkedList.h  Node.cpp
Lessons/C/3 8 23/: Node.cpp  Node.h  doubly_test.cpp  doubly_test.h  main.cpp
Lessons/C/BTnode/: BTNode.cpp  BTNode.h  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  main.cpp
Lessons/C/Stacks/: Queue.cpp  Queue.h  Stack.cpp  Stack.h
Objects-Lab/: Post.py  photogram.py
Personal/Journal encryption/: 30 Big day.txt  decrypt.py
Projects/Dessert Shop/: desserts.py  dessertshop.py  freeze.py  packaging.py
Projects/LinkedListLab/: CMakeLists.txt  (+8 more)
Silly_programs/: Draw.py  Minesweeper the text adventure game.py  days_left.py  formatting
U2 lab/: Question1.py  Question10.py  Question2.py  Question3.py  Question4.py  Question7.py  Question9.py
(+53 files in other folders)
