cmake_minimum_required(VERSION 3.24)
project(C)

set(CMAKE_CXX_STANDARD 17)

add_executable(C Stacks/Queue.cpp Stacks/Queue.cpp Stacks/Stack.cpp "3 8 23/doubly_test.cpp" "3 8 23/doubly_test.h" "3 8 23/Node.cpp" "3 8 23/Node.h" "3 8 23/main.cpp" "3 17 23/DoublyLinkedList.h" "3 17 23/Node.cpp" "3 17 23/Node.cpp" "3 17 23/DoublyLinkedList.cpp")
